--- a/po/nn.po
+++ b/po/nn.po
@@ -6546,7 +6546,7 @@ msgstr ""
 msgid "NOW"
 msgstr "NÅ"
 
-msgid "NTP Hostname"
+msgid "Optional local NTP server"
 msgstr ""
 
 #
@@ -11068,7 +11068,7 @@ msgstr ""
 msgid "The following files were found..."
 msgstr "Følgende filer ble funnet..."
 
-msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgid "The hostname or the IP address of a local NTP server to synchronise the time with."
 msgstr ""
 
 msgid ""
