--- a/po/ar.po
+++ b/po/ar.po
@@ -6328,7 +6328,7 @@ msgstr "لا"
 msgid "NOW"
 msgstr "لا"
 
-msgid "NTP Hostname"
+msgid "Optional local NTP server"
 msgstr ""
 
 msgid "NTSC"
@@ -10704,7 +10704,7 @@ msgstr ""
 msgid "The following files were found..."
 msgstr "تم العثور على هذه الملفات..."
 
-msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgid "The hostname or the IP address of a local NTP server to synchronise the time with."
 msgstr ""
 
 msgid ""
