--- a/po/bg.po
+++ b/po/bg.po
@@ -5841,7 +5841,7 @@ msgstr "НЕ"
 msgid "NOW"
 msgstr "СЕГА"
 
-msgid "NTP Hostname"
+msgid "Optional local NTP server"
 msgstr "Адрес на NTP хост"
 
 msgid "NTSC"
@@ -9860,7 +9860,7 @@ msgstr ""
 msgid "The following files were found..."
 msgstr "Следните файлове бяха открити..."
 
-msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgid "The hostname or the IP address of a local NTP server to synchronise the time with."
 msgstr "Имeто на хоста или IP-адреса на NTP-сървъра, с който да синхронизирате времето."
 
 msgid ""
