--- a/po/el.po
+++ b/po/el.po
@@ -5923,7 +5923,7 @@ msgstr "ΟΧΙ"
 msgid "NOW"
 msgstr "ΤΩΡΑ"
 
-msgid "NTP Hostname"
+msgid "Optional local NTP server"
 msgstr "Όνομα διακομιστή NTP"
 
 msgid "NTSC"
@@ -10007,7 +10007,7 @@ msgstr ""
 msgid "The following files were found..."
 msgstr "Βρέθηκαν τα παρακάτω αρχεία..."
 
-msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgid "The hostname or the IP address of a local NTP server to synchronise the time with."
 msgstr "Το όνομα ή η διεύθυνση IP του διακομιστή NTP για τον συγχρονισμό της ώρας."
 
 msgid ""
