--- a/po/et.po
+++ b/po/et.po
@@ -6003,7 +6003,7 @@ msgstr "EI"
 msgid "NOW"
 msgstr "PRAEGU"
 
-msgid "NTP Hostname"
+msgid "Optional local NTP server"
 msgstr ""
 
 msgid "NTSC"
@@ -10155,7 +10155,7 @@ msgstr ""
 msgid "The following files were found..."
 msgstr "Leitud järgmised failid"
 
-msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgid "The hostname or the IP address of a local NTP server to synchronise the time with."
 msgstr ""
 
 msgid ""
