--- a/po/fi.po
+++ b/po/fi.po
@@ -6637,7 +6637,7 @@ msgstr "EI"
 msgid "NOW"
 msgstr "NYT"
 
-msgid "NTP Hostname"
+msgid "Optional local NTP server"
 msgstr ""
 
 #
@@ -11298,7 +11298,7 @@ msgstr ""
 msgid "The following files were found..."
 msgstr "Seuraavat tiedostot löytyi..."
 
-msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgid "The hostname or the IP address of a local NTP server to synchronise the time with."
 msgstr ""
 
 msgid ""
