--- a/po/fy.po
+++ b/po/fy.po
@@ -6803,7 +6803,7 @@ msgstr ""
 msgid "NOW"
 msgstr "No"
 
-msgid "NTP Hostname"
+msgid "Optional local NTP server"
 msgstr ""
 
 #
@@ -11584,7 +11584,7 @@ msgstr ""
 msgid "The following files were found..."
 msgstr ""
 
-msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgid "The hostname or the IP address of a local NTP server to synchronise the time with."
 msgstr ""
 
 #
