--- a/po/is.po
+++ b/po/is.po
@@ -6607,7 +6607,7 @@ msgstr ""
 msgid "NOW"
 msgstr "NÚNA"
 
-msgid "NTP Hostname"
+msgid "Optional local NTP server"
 msgstr ""
 
 #
@@ -11384,7 +11384,7 @@ msgstr ""
 msgid "The following files were found..."
 msgstr "Eftirfarandi skrár fundust..."
 
-msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgid "The hostname or the IP address of a local NTP server to synchronise the time with."
 msgstr ""
 
 #, fuzzy
