--- a/po/pl.po
+++ b/po/pl.po
@@ -5959,7 +5959,7 @@ msgstr "Nie"
 msgid "NOW"
 msgstr "Teraz"
 
-msgid "NTP Hostname"
+msgid "Optional local NTP server"
 msgstr ""
 
 msgid "NTSC"
@@ -10070,7 +10070,7 @@ msgstr ""
 msgid "The following files were found..."
 msgstr "Następujące pliki zostały znalezione..."
 
-msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgid "The hostname or the IP address of a local NTP server to synchronise the time with."
 msgstr "Nazwa hosta lub adres IP serwera NTP, z którym ma być synchronizowany czas."
 
 msgid ""
