--- a/po/pt.po
+++ b/po/pt.po
@@ -6824,7 +6824,7 @@ msgstr ""
 msgid "NOW"
 msgstr "AGORA"
 
-msgid "NTP Hostname"
+msgid "Optional local NTP server"
 msgstr ""
 
 #
@@ -11665,7 +11665,7 @@ msgstr ""
 msgid "The following files were found..."
 msgstr "Os seguintes ficheiros foram encontrados..."
 
-msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgid "The hostname or the IP address of a local NTP server to synchronise the time with."
 msgstr ""
 
 #
