--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -6001,7 +6001,7 @@ msgstr ""
 msgid "NOW"
 msgstr "Agora"
 
-msgid "NTP Hostname"
+msgid "Optional local NTP server"
 msgstr ""
 
 msgid "NTSC"
@@ -10174,7 +10174,7 @@ msgstr ""
 msgid "The following files were found..."
 msgstr "Arquivos de mídia encontrados"
 
-msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgid "The hostname or the IP address of a local NTP server to synchronise the time with."
 msgstr ""
 
 msgid ""
