--- a/po/sr.po
+++ b/po/sr.po
@@ -6893,7 +6893,7 @@ msgstr ""
 msgid "NOW"
 msgstr "SADA"
 
-msgid "NTP Hostname"
+msgid "Optional local NTP server"
 msgstr ""
 
 #
@@ -11741,7 +11741,7 @@ msgstr ""
 msgid "The following files were found..."
 msgstr "Sledeće datoteke su pronađene..."
 
-msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgid "The hostname or the IP address of a local NTP server to synchronise the time with."
 msgstr ""
 
 #
