--- a/po/th.po
+++ b/po/th.po
@@ -6117,7 +6117,7 @@ msgstr ""
 msgid "NOW"
 msgstr "ตอนนี้"
 
-msgid "NTP Hostname"
+msgid "Optional local NTP server"
 msgstr ""
 
 msgid "NTSC"
@@ -10385,7 +10385,7 @@ msgstr ""
 msgid "The following files were found..."
 msgstr "พบไฟล์เหล่านี้..."
 
-msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgid "The hostname or the IP address of a local NTP server to synchronise the time with."
 msgstr ""
 
 #, fuzzy
