--- a/po/tr.po
+++ b/po/tr.po
@@ -6046,7 +6046,7 @@ msgstr ""
 msgid "NOW"
 msgstr "ŞİMDİ"
 
-msgid "NTP Hostname"
+msgid "Optional local NTP server"
 msgstr ""
 
 msgid "NTSC"
@@ -10239,7 +10239,7 @@ msgstr ""
 msgid "The following files were found..."
 msgstr "Aşağıdaki dosyalar bulundu..."
 
-msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgid "The hostname or the IP address of a local NTP server to synchronise the time with."
 msgstr ""
 
 msgid ""
