--- a/po/sk.po
+++ b/po/sk.po
@@ -624,7 +624,7 @@ msgid "A recording is currently running. Please stop the recording before starti
 msgstr "Práve prebieha nahrávanie. Pred spustením vyhľadávania zastavte nahrávanie."
 
 msgid "A repeating event is currently recording. What would you like to do?"
-msgstr "Práve sa zaznamenáva opakujúca sa udalosť. Čo by ste chceli urobiť?"
+msgstr "Práve sa zaznamenáva opakujúci sa program. Čo by ste chceli urobiť?"
 
 #, python-format
 msgid "A required tool (%s) was not found."
@@ -820,7 +820,7 @@ msgid "Add to parental protection"
 msgstr "Pridať do rodičovskej ochrany"
 
 msgid "Add/remove change timer for current event"
-msgstr "Pridať/odstrániť časovač pre aktuálnu udalosť"
+msgstr "Pridať/odstrániť časovač pre aktuálny program"
 
 msgid "Additional cable of motorized LNB"
 msgstr "Dodatočný kábel motorizovaného LNB"
@@ -865,7 +865,7 @@ msgid "Afghanistan"
 msgstr "Afganistan"
 
 msgid "After event"
-msgstr "Po udalosti"
+msgstr "Po programe"
 
 msgid "Aland Islands"
 msgstr "Alandské ostrovy"
@@ -880,7 +880,7 @@ msgid "Algeria"
 msgstr "Alžírsko"
 
 msgid "Alignment of events"
-msgstr "Zoradenie udalostí"
+msgstr "Zoradenie programov"
 
 msgid "Alignment of service names"
 msgstr "Zoradenie náźvov staníc"
@@ -2073,7 +2073,7 @@ msgid "Configure for how long the infobar will remain visible after activation."
 msgstr "Nastavte, ako dlho bude infobar viditeľný po aktivácii."
 
 msgid "Configure how long finished events should remain visible in the EPG. Useful when you need information about an event which has just finished, or has been delayed (or for plugins that support catchup)."
-msgstr "Konfigurácia toho, ako dlho majú zostať dokončené udalosti viditeľné v EPG. Užitočné, ak potrebujete informácie o práve skončenej udalosti alebo o udalosti, ktorá bola posunutá (alebo pre doplnky, ktoré podporujú funkciu catchup)."
+msgstr "Konfigurácia toho, ako dlho majú zostať dokončené programy viditeľné v EPG. Užitočné, ak potrebujete informácie o práve skončenom programe alebo o programe, ktorý bola posunutý (alebo pre doplnky, ktoré podporujú funkciu catchup)."
 
 msgid "Configure how many channels are shown in the selection list."
 msgstr "Konfigurácia počtu kanálov zobrazených v zozname staníc."
@@ -2984,7 +2984,7 @@ msgid "Disable background scanning"
 msgstr "Vypnúť skenovanie na pozadí"
 
 msgid "Disable current event but not coming events"
-msgstr "Vypnúť aktuálnu udalosť, ale nezrušiť nasledujúce udalosti"
+msgstr "Vypnúť aktuálny program, ale nezrušiť nasledujúce programy"
 
 msgid "Disable move mode"
 msgstr "Zrušiť presun"
@@ -3123,7 +3123,7 @@ msgstr "Naozaj chcete odstrániť záložku %s?"
 
 #, python-format
 msgid "Do you really want to stop current event and delete timer %s?"
-msgstr "Naozaj chcete zastaviť aktuálnu udalosť a zmazať časovač %s?"
+msgstr "Naozaj chcete zastaviť aktuálny program a zmazať časovač %s?"
 
 msgid "Do you want this?"
 msgstr "Chcete to?"
@@ -3479,7 +3479,7 @@ msgid "Enable remote enigma2 receiver to be tried to tune into services that can
 msgstr "Povolenie vzdialenému Enigma2 prijímaču pokúsiť sa naladiť stanice, ktoré nie je možné naladiť lokálne (napr. tuner je zaneprázdnený alebo typ stanice nie je k dispozícii). Zadajte úplnú adresu URL, vrátane http:// a číslo portu (obvykle ...: 8001 ), napríklad http://druhy_box: 8001."
 
 msgid "Enable setting a time interval for filtering events in SingleEPG using the 'Stop' button."
-msgstr "Povoliť nastavenie časového intervalu pre filtrovanie udalostí v SingleEPG pomocou tlačidla „Stop“."
+msgstr "Povoliť nastavenie časového intervalu pre filtrovanie programov v SingleEPG pomocou tlačidla „Stop“."
 
 msgid "Enable teletext caching"
 msgstr "Povoliť ukladanie teletextu do medzipamäte"
@@ -3530,7 +3530,7 @@ msgid "End favourites edit"
 msgstr "Skončiť úpravu obľúbených"
 
 msgid "End of the time interval during which events must begin to be displayed. If the filter is active, use keys 3 and 6 to adjust the end time, and key 0 to save."
-msgstr "Koniec časového intervalu, počas ktorého sa musia začať zobrazovať udalosti. Ak je filter aktívny, použite klávesy 3 a 6 na nastavenie koncového času a klávesu 0 na uloženie."
+msgstr "Koniec časového intervalu, počas ktorého sa musia začať zobrazovať programy. Ak je filter aktívny, použite klávesy 3 a 6 na nastavenie koncového času a klávesu 0 na uloženie."
 
 msgid "End time"
 msgstr "Čas ukončenia"
@@ -3700,19 +3700,19 @@ msgid "Ethiopia"
 msgstr "Etiópia"
 
 msgid "Event View Actions"
-msgstr "Akcie zobrazenia udalosti"
+msgstr "Akcie zobrazenia programov"
 
 msgid "Event View EPG Actions"
-msgstr "Zobrazenie udalosti EPG Akcie"
+msgstr "Zobrazenie programov EPG Akcie"
 
 msgid "Event font size (relative to skin size)"
 msgstr "Veľkosť písma programu (v pomere k veľkosti vzhľadu)"
 
 msgid "Event name first"
-msgstr "Názov udalosti na začiatku"
+msgstr "Názov programu na začiatku"
 
 msgid "Event view"
-msgstr "Zobrazenie udalostí"
+msgstr "Zobrazenie programu"
 
 msgid "Event view context menu"
 msgstr "Kontextové menu zobrazenia programu"
@@ -4676,7 +4676,7 @@ msgid "If set to 'yes' signal values (SNR, etc) will be calculated from API V3. 
 msgstr "Ak je nastavené na 'áno' , hodnoty signálu (SNR, atď) budú vypočítané z API v3. Toto je stará API verzia, ktorá je už nahradená novšou."
 
 msgid "If set to 'yes' the same commands will be sent to the TV for deep standby events, as are sent during regular standby events."
-msgstr "Ak je nastavené na 'Áno', rovnaký príkaz bude odoslaný do TV aj v režime udalostí hlbokého spánku, aký je zasielaný i počas regulérnych udalostí pohotovostného režimu."
+msgstr "Ak je nastavené na 'Áno', rovnaký príkaz bude odoslaný do TV aj v režime programov hlbokého spánku, aký je zasielaný i počas regulérnych programov pohotovostného režimu."
 
 msgid "If set to 'yes', allows you to use timeshift with alternative audio plugins."
 msgstr "Ak je nastavené na „áno“, umožňuje vám použiť časový posun s alternatívnymi zvukovými doplnkami."
@@ -5159,7 +5159,7 @@ msgid "Kexec MultiBoot Manager"
 msgstr "Kexec MultiBoot Manažér"
 
 msgid "Key Events"
-msgstr "Kľúčové udalosti"
+msgstr "Kľúčové programy"
 
 msgid "Keyboard"
 msgstr "Klávesnica"
@@ -5983,7 +5983,7 @@ msgid "New Zealand"
 msgstr "Nový Zéland"
 
 msgid "News/Current Affairs/Social"
-msgstr "Správy/Aktuálne udalosti/Sociálne"
+msgstr "Správy/Aktuálne programy/Sociálne"
 
 msgctxt "button label, 'next screen'"
 msgid "Next"
@@ -8843,13 +8843,13 @@ msgid "Show disabled timers (local only)"
 msgstr "Zobraziť vypnuté časovače (len miestne)"
 
 msgid "Show event details"
-msgstr "Zobraziť detaily o udalosti"
+msgstr "Zobraziť detaily o programe"
 
 msgid "Show event-progress in channel selection"
-msgstr "Zobraziť priebeh udalosti v zozname staníc"
+msgstr "Zobraziť priebeh programu v zozname staníc"
 
 msgid "Show eventinfo plugins"
-msgstr "Zobraziť doplnky informácií o udalosti"
+msgstr "Zobraziť doplnky informácií o programe"
 
 msgid "Show extended description"
 msgstr "Zobraziť rozšírený opis"
@@ -9005,7 +9005,7 @@ msgid "Show the radio player..."
 msgstr "Zobraziť prehrávač rádia..."
 
 msgid "Show the service information on two lines in the channel selection screen. You can choose between the current event description below the channel name, or the current event description next to the channel name, and the next event description on the second line."
-msgstr "Zobrazenie informácií o službe na dvoch riadkoch na obrazovke výberu kanála. Môžete si vybrať medzi popisom aktuálnej udalosti pod názvom kanála alebo popisom aktuálnej udalosti vedľa názvu kanála a popisom ďalšej udalosti v druhom riadku."
+msgstr "Zobrazenie informácií o službe na dvoch riadkoch na obrazovke výberu kanála. Môžete si vybrať medzi popisom aktuálneho programu pod názvom kanála alebo popisom aktuálneho programu vedľa názvu kanála a popisom ďalšieho programu v druhom riadku."
 
 msgid "Show the tv player..."
 msgstr "Zobraziť TV prehrávač..."
@@ -9388,7 +9388,7 @@ msgid "Standby LED"
 msgstr "LED v pohotovostnom režime"
 
 msgid "Standby after current event"
-msgstr "Pohotovostný režim po aktuálnej udalosti"
+msgstr "Pohotovostný režim po aktuálnom programe"
 
 #, python-format
 msgid "Standby fan %d PWM"
@@ -9423,13 +9423,13 @@ msgid "Start instant recording"
 msgstr "Spustiť okamžité nahrávanie"
 
 msgid "Start of the time interval during which events must begin to be displayed. If the filter is active, use keys 1 and 4 to adjust the start time, and key 0 to save."
-msgstr "Začiatok časového intervalu, počas ktorého sa musia začať zobrazovať udalosti. Ak je filter aktívny, použite klávesy 1 a 4 na nastavenie času začiatku a klávesu 0 na uloženie."
+msgstr "Začiatok časového intervalu, počas ktorého sa musia začať zobrazovať programy. Ak je filter aktívny, použite klávesy 1 a 4 na nastavenie času začiatku a klávesu 0 na uloženie."
 
 msgid "Start offline decode"
 msgstr "Spustiť offline dekódovanie"
 
 msgid "Start recording current event"
-msgstr "Spustiť nahrávanie aktuálnej udalosti"
+msgstr "Spustiť nahrávanie aktuálneho programu"
 
 msgid "Start recording?"
 msgstr "Spustiť nahrávanie?"
@@ -9507,10 +9507,10 @@ msgid "Stop and delete recordings:"
 msgstr "Zastaviť a zmazať nahrávky:"
 
 msgid "Stop current event and disable coming events"
-msgstr "Zastaviť aktuálnu udalosť a zrušiť nasledujúce udalosti"
+msgstr "Zastaviť aktuálny program a zrušiť nasledujúce programy"
 
 msgid "Stop current event but not coming events"
-msgstr "Zastaviť aktuálnu udalosť, ale nezrušiť nasledujúce udalosti"
+msgstr "Zastaviť aktuálny program, ale nezrušiť nasledujúce programy"
 
 msgid "Stop current stream"
 msgstr "Zastaviť aktuálny stream"
@@ -9933,7 +9933,7 @@ msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
 "Press Blue or OK to start using your receiver."
 msgstr ""
-"akujeme, že používate sprievodcu. Váš prijímač je teraz pripravený na použitie.\n"
+"Ďakujeme, že používate sprievodcu. Váš prijímač je teraz pripravený na použitie.\n"
 "Stlačte modré tlačidlo alebo tlačidlo OK a začnite používať prijímač."
 
 #, python-format
@@ -10709,7 +10709,7 @@ msgid "Two lines"
 msgstr "Dva riadky"
 
 msgid "Two lines and next event"
-msgstr "Dva riadky a nasledujúca udalosť"
+msgstr "Dva riadky a nasledujúci program"
 
 msgid "Type"
 msgstr "Typ"
@@ -11047,7 +11047,7 @@ msgid "Using fixed address"
 msgstr "Používam pevnú adresu"
 
 msgid "Using the 'Stop' button will cyclically switch displaying events starting: 'outside the interval', 'within the interval', and 'without filtering', instead of 'within the interval', 'outside the interval', and 'without filtering'."
-msgstr "Pomocou tlačidla „Stop“ sa cyklicky prepína zobrazenie udalostí začínajúcich: „mimo intervalu“, „v rámci intervalu“ a „bez filtrovania“ namiesto „v rámci intervalu“, „mimo intervalu“ a „bez filtrovania“."
+msgstr "Pomocou tlačidla „Stop“ sa cyklicky prepína zobrazenie programov začínajúcich: „mimo intervalu“, „v rámci intervalu“ a „bez filtrovania“ namiesto „v rámci intervalu“, „mimo intervalu“ a „bez filtrovania“."
 
 #, python-format
 msgid "Using tuner %s"
@@ -11515,7 +11515,7 @@ msgid "When enabled, deleted recordings are moved to the trash can, instead of b
 msgstr "Ak povolené, odstránené nahrávky sú presunuté do koša, namiesto toho aby sa okamžite odstránili."
 
 msgid "When enabled, display the EIT now/next eventdata in infobar. When disabled, display now/next eventdata from the EPG cache instead."
-msgstr "Ak je povolené, zobrazí aktuálne/nasledujúce EIT (EPG) v informačnej lište. Ak nie je povolené, zobrazí aktuálnu/nasledujúcu udalosť z vyrovnávacej pamäte EPG."
+msgstr "Ak je povolené, zobrazí aktuálne/nasledujúce EIT (EPG) v informačnej lište. Ak nie je povolené, zobrazí aktuálny/nasledujúci program z vyrovnávacej pamäte EPG."
 
 msgid "When enabled, encryption info will be shown in the infobar (when supported by the skin)."
 msgstr "Ak povolené, na informačnom paneli sa zobrazí informácia o kódovaní (ak je podporované zvoleným vzhľadom)."
@@ -12493,7 +12493,7 @@ msgid "list style single line"
 msgstr "jednoriadkový zoznam"
 
 msgid "listens to hotplug events"
-msgstr "počúvanie do hotplug udalostí"
+msgstr "počúvanie do hotplug programov"
 
 msgid "literature"
 msgstr "literatúra"
